--- a/BlazorApp1/BlazorApp1/Components/Pages/Home.razor
+++ b/BlazorApp1/BlazorApp1/Components/Pages/Home.razor
@@ -1,7 +1,40 @@
 ﻿@page "/"
+@rendermode InteractiveServer
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+<MudIconButton Icon="@Icons.Material.Filled.ArrowLeft" Size="Size.Large" Color="Color.Primary" OnClick="ArrowLeft"/>
+<MudIconButton Icon="@Icons.Material.Filled.ArrowDropUp" Size="Size.Large" Color="Color.Primary" OnClick="ArrowDropUp" />
+<MudIconButton Icon="@Icons.Material.Filled.ArrowRight" Size="Size.Large" Color="Color.Primary" OnClick="ArrowRight" />
+<MudIconButton Icon="@Icons.Material.Filled.ArrowDropDown" Size="Size.Large" Color="Color.Primary" OnClick="ArrowDropDown" />
+
+<div class="position-relative" style="width: 800px; height:800px; background-color: rgba(0,0,0,0.2)">
+	<div class="position-absolute" style="top: @(top)px; left: @(left)px;">
+		<MudIcon Icon="@Icons.Material.Filled.DirectionsCar" Size="Size.Large"/>
+	</div>
+
+</div>
+@code{
+	int top = 500;
+	int left = 500;
+
+	private void ArrowLeft()
+	{
+		left -= 5;
+	}
+	private void ArrowDropUp()
+	{
+		top -= 5;
+	}
+	private void ArrowRight()
+	{
+		left += 5;
+	}
+	private void ArrowDropDown()
+	{
+		top += 5;
+	}
+}
+
