--- a/BlazorApp1/BlazorApp1/Components/Layout/NavMenu.razor
+++ b/BlazorApp1/BlazorApp1/Components/Layout/NavMenu.razor
@@ -30,6 +30,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> My Info
             </NavLink>
             </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tinhtong">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tinhtong
+            </NavLink>
+        </div>
     </nav>
 </div>
 
