--- a/BlazorApp1/BlazorApp1/Components/Layout/NavMenu.razor
+++ b/BlazorApp1/BlazorApp1/Components/Layout/NavMenu.razor
@@ -35,6 +35,16 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tinhtong
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="table">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Table
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="table1">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Table1
+            </NavLink>
+        </div>
     </nav>
 </div>
 
