--- a/BlazorApp1/BlazorApp1/Components/Pages/Table1.razor
+++ b/BlazorApp1/BlazorApp1/Components/Pages/Table1.razor
@@ -59,6 +59,7 @@
     </YesButton>
 </MudMessageBox>
 
+
 @code {
     class Student
     {
@@ -125,7 +126,19 @@
 
     private async Task OpenDeleteDialog(Student student)
     {
+    //     [Inject] private IDialogService DialogService { get; set; }
 
+    //     string state = "Message box hasn't been opened yet";
+
+    // private async void OnButtonClicked()
+    // {
+        bool? result = await DialogService.ShowMessageBox(
+            "Ban co muon xoa du lieu ?",
+            "Hanh dong nay khong the hoan tac!",
+            yesText: "Xoa!", cancelText: "Huy");
+        // student.Class = result == null ? "Canceled" : "Deleted!";
+        // StateHasChanged();
+    // }
         Students.Remove(student);
         StateHasChanged();
     }
